perf(portal): paginate todo/completed tasks via engine pushdown
Push page/size/sort and column filters into the workflow engine task query
so the portal stops fetching the whole task list on every render. When a
request cannot be fully expressed by the engine criteria the component falls
back to a bounded full scan, but routing that decision now goes through a
single predicate (EngineTaskPushdown.canFullyPush) instead of a second,
wider condition that forced full scans for requests the engine could serve.

The full-scan cache key gains the caller's active business unit and role so
two users sharing an engine assignee but sitting in different workspaces no
longer read each other's cached slice.

Co-authored-by: Cursor <cursoragent@cursor.com>